task-03: в gateway добавлен метод изменения позиции колонки
