# gateway/internal/transport/http/gateway/v1/column.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	createColumnUseCase "github.com/poymanov/codemania-task-board/gateway/internal/usecase/column/create"
+	columnUpdatePositionUseCase "github.com/poymanov/codemania-task-board/gateway/internal/usecase/column/update_position"
 	gatewayV1 "github.com/poymanov/codemania-task-board/shared/pkg/openapi/gateway/v1"
 	"github.com/rs/zerolog/log"
 )
@@ -40,4 +41,23 @@ func (a *Api) ColumnDelete(ctx context.Context, params gatewayV1.ColumnDeletePar
 	}
 
 	return &gatewayV1.ColumnDeleteNoContent{}, nil
+}
+
+func (a *Api) ColumnUpdatePosition(ctx context.Context, req *gatewayV1.ColumnUpdatePositionRequestBody, params gatewayV1.ColumnUpdatePositionParams) (gatewayV1.ColumnUpdatePositionRes, error) {
+	updatePositionColumnDTO := columnUpdatePositionUseCase.UpdatePositionColumnDTO{
+		Id:            params.ColumnId,
+		LeftPosition:  req.LeftPosition,
+		RightPosition: req.RightPosition,
+	}
+
+	err := a.columnUpdatePositionUseCase.UpdatePosition(ctx, updatePositionColumnDTO)
+	if err != nil {
+		log.Error().Err(err).Any("request", req).Any("params", params).Msg("update position column failed")
+		return &gatewayV1.BadRequestError{
+			Code:    http.StatusBadRequest,
+			Message: "Create column failed",
+		}, nil
+	}
+
+	return &gatewayV1.ColumnUpdatePositionNoContent{}, nil
 }
