# shared/pkg/openapi/gateway/v1/oas_request_encoders_gen.go
@@ -37,3 +37,17 @@ func encodeColumnCreateRequest(
 	ht.SetBody(r, bytes.NewReader(encoded), contentType)
 	return nil
 }
+
+func encodeColumnUpdatePositionRequest(
+	req *ColumnUpdatePositionRequestBody,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
