# shared/pkg/openapi/gateway/v1/oas_validators_gen.go
@@ -4,7 +4,42 @@ package gateway_v1
 
 import (
 	"github.com/go-faster/errors"
+	"github.com/ogen-go/ogen/validate"
 )
+
+func (s *ColumnUpdatePositionRequestBody) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if err := (validate.Float{}).Validate(float64(s.LeftPosition)); err != nil {
+			return errors.Wrap(err, "float")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "left_position",
+			Error: err,
+		})
+	}
+	if err := func() error {
+		if err := (validate.Float{}).Validate(float64(s.RightPosition)); err != nil {
+			return errors.Wrap(err, "float")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "right_position",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
 
 func (s GetAllBoardResponse) Validate() error {
 	alias := ([]GetAllBoardResponseItem)(s)
